--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <nav class="navbar navbar-dark bg-dark text-center fixed-top">
     <div class="container-fluid">
-      <a class="navbar-brand" href="https://sockmonkeyy.github.io/poke">Tic Tac Toe</a>
+      <a class="navbar-brand" href="https://sockmonkeyy.github.io/ttt">Tic Tac Toe</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar"
         aria-controls="offcanvasDarkNavbar">
         <span class="navbar-toggler-icon"></span>
