--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="https://sockmonkeyy.github.io/poke">Pokemon Match</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="https://sockmonkeyy.github.io/myRPS">Rock, Paper, Scissors</a>
+                    </li>
         </div>
       </div>
     </div>
