changed O bg to match bg

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   </nav>
 <body>
     <div><h1>Tic Tac Toe</h1></div>
-        <div class="board" id="board">
+        <div class="board rounded" id="board">
           <div class="cell" data-cell></div>
           <div class="cell" data-cell></div>
           <div class="cell" data-cell></div>
