added numbers game

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <a class="nav-link" href="https://sockmonkeyy.github.io/QuickQuiz/">Web Dev Quiz</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="https://sockmonkeyy.github.io/jscraps/version1NumberGuessingGame.html">Number
+              <a class="nav-link" href="https://sockmonkeyy.github.io/numberGuessing">Number
                   Guessing Game</a>
               </li>
               <li class="nav-item">
